# painting_rust_trigo_iter

./: .gitignore  Cargo.toml  README.md  painting_rust_trigo_iter.sublime-project
src/: main.rs  shader.wgsl
