[package]
name = "painting_rust_trigo_iter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "~1.9.1", features = [ "derive" ] }
pollster = "~0.2.5"
winit = "~0.26.1"
wgpu = "~0.12.0"
env_logger = "~0.9.0"
